// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPreview renders VideoPreview 1`] = `
<div
  className="video-preview"
>
  <div
    className="image-container"
  >
    <Image
      alt="Video Preview"
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title
      </div>
      <div>
        <span>
          2.1M Views • 2 days ago
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders horizontally 1`] = `
<div
  className="video-preview "
>
  <div
    className="image-container"
  >
    <Image
      alt="Video Preview"
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title
      </div>
      <div>
        <span>
          2.1M Views • 2 days ago
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`VideoPreview renders vertically 1`] = `
<div
  className="video-preview "
>
  <div
    className="image-container"
  >
    <Image
      alt="Video Preview"
      as="img"
      src="http://via.placeholder.com/210x118"
      ui={true}
    />
    <div
      className="time-label"
    >
      <span>
        05:22
      </span>
    </div>
  </div>
  <div
    className="video-info"
  >
    <div
      className="semi-bold show-max-two-lines"
    >
      Video Title
    </div>
    <div
      className="video-preview-metadata-container"
    >
      <div
        className="channel-title"
      >
        Channel Title
      </div>
      <div>
        <span>
          2.1M Views • 2 days ago
        </span>
      </div>
    </div>
  </div>
</div>
`;
